Adición search por actividad y distrito + test